[package]
name = "claui"
version = "0.1.1"
edition = "2021"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "A GUI generator for clap using egui."
repository = "https://github.com/grantshandy/claui"
homepage = "https://github.com/grantshandy/claui"
documentation = "https://docs.rs/claui"
license = "GPL-3.0"
categories = ["gui", "command-line-interface"]
keywords = ["gui", "clap", "builder", "generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.1", features = ["derive"] }
eframe = "^0.18.0"
shh = "1.0.1"
