[package]
name = "claui"
version = "0.3.0"
edition = "2021"
authors = ["Grant Handy <granthandy@proton.me>"]
description = "A GUI generator for clap using egui."
repository = "https://github.com/grantshandy/claui"
homepage = "https://github.com/grantshandy/claui"
documentation = "https://docs.rs/claui"
license = "GPL-3.0"
categories = ["gui", "command-line-interface"]
keywords = ["gui", "clap", "builder", "generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
eframe = "0.26"
shh = "1.0"
